Add GitHub Actions workflow for testing code changes

--- a/.github/workflows/test-codechanges.yml
+++ b/.github/workflows/test-codechanges.yml
@@ -1,9 +1,10 @@
 name: Test Code Changes Tracker
 
 on:
-  pull_request:
-    types: [opened, synchronize, reopened, closed]
-  workflow_dispatch:  # Allows manual testing from GitHub UI
+  push:
+    branches:
+      - main
+# Allows manual testing from GitHub UI
 
 jobs:
   test-codechanges:
